# nonconventional_keystrokes

./: .gitignore  model_exploration.ipynb  pyproject.toml  weird_behavior_exploration.ipynb
model_weird_behavior/: __init__.py  calculate_features.py  import_data.py  parallelize_model_testing  process_data.py  test_model.py  weird_behavior_exploration.ipynb
